--- a/syllabus/ta/akinola.qmd
+++ b/syllabus/ta/akinola.qmd
@@ -3,7 +3,7 @@ title: Akinola, Bethany
 categories: 
   - Lab helper
 description: "Th 1:25PM - 2:40PM (Sec 7)"
-subtitle: "[🔗](https://www.nytimes.com)"
+subtitle: "[🔗](https://docs.google.com/spreadsheets/d/1bbCCaRtyUzPbB-SqcjseiwVLwFlgQbvCMaMWnvT3EG8/edit?usp=sharing)"
 image: headshots/bethany.png
 image-alt: Headshot of TA
 ---
