--- a/syllabus/ta/kakkad.qmd
+++ b/syllabus/ta/kakkad.qmd
@@ -3,7 +3,7 @@ title: Kakkad, Dwija
 categories: 
   - Lab leader
 description: "Th 4:40PM - 5:55PM (Sec 10)"
-subtitle: "[🔗](https://www.nytimes.com)"
+subtitle: "[🔗](https://docs.google.com/spreadsheets/d/1bbCCaRtyUzPbB-SqcjseiwVLwFlgQbvCMaMWnvT3EG8/edit?usp=sharing)"
 image: headshots/kakkad.jpg
 image-alt: Headshot of TA
 ---
