--- a/syllabus/ta/dey.qmd
+++ b/syllabus/ta/dey.qmd
@@ -3,7 +3,7 @@ title: Dey, Arijit
 categories: 
   - Lab leader
 description: "Th 1:25PM - 2:40PM (Sec 6)"
-subtitle: "[🔗](https://www.nytimes.com)"
+subtitle: "[🔗](https://docs.google.com/spreadsheets/d/1bbCCaRtyUzPbB-SqcjseiwVLwFlgQbvCMaMWnvT3EG8/edit?usp=sharing)"
 image: headshots/arijit.png
 image-alt: Headshot of TA
 ---
