--- a/syllabus/ta/norton.qmd
+++ b/syllabus/ta/norton.qmd
@@ -3,7 +3,7 @@ title: Norton, Tory
 categories: 
   - Lab leader
 description: "Th 3:05PM - 4:20PM (Sec 8)"
-subtitle: "[🔗](https://www.nytimes.com)"
+subtitle: "[🔗](https://docs.google.com/spreadsheets/d/1bbCCaRtyUzPbB-SqcjseiwVLwFlgQbvCMaMWnvT3EG8/edit?usp=sharing)"
 image: headshots/norton.jpg
 image-alt: Headshot of TA
 ---
