--- a/syllabus/ta/wu.qmd
+++ b/syllabus/ta/wu.qmd
@@ -4,7 +4,7 @@ categories:
   - Lab leader
   - Lecture helper
 description: "Th 10:05AM - 11:20AM (Sec 3)"
-subtitle: "[🔗](https://www.nytimes.com)"
+subtitle: "[🔗](https://docs.google.com/spreadsheets/d/1bbCCaRtyUzPbB-SqcjseiwVLwFlgQbvCMaMWnvT3EG8/edit?usp=sharing)"
 image: headshots/wu.png
 image-alt: Headshot of TA
 ---
