--- a/syllabus/ta/zhang_edward.qmd
+++ b/syllabus/ta/zhang_edward.qmd
@@ -3,7 +3,7 @@ title: Zhang, Edward
 categories: 
   - Lab helper
 description: "Th 11:45AM - 1:00PM (Sec 5)"
-subtitle: "[🔗](https://www.nytimes.com)"
+subtitle: "[🔗](https://docs.google.com/spreadsheets/d/1bbCCaRtyUzPbB-SqcjseiwVLwFlgQbvCMaMWnvT3EG8/edit?usp=sharing)"
 image: headshots/ed.jpg
 image-alt: Headshot of TA
 ---
