--- a/syllabus/ta/zhang_lisa.qmd
+++ b/syllabus/ta/zhang_lisa.qmd
@@ -3,7 +3,7 @@ title: Zhang, Lisa
 categories: 
   - Lab helper
 description: "Th 10:05AM - 11:20AM (Sec 3)"
-subtitle: "[🔗](https://www.nytimes.com)"
+subtitle: "[🔗](https://docs.google.com/spreadsheets/d/1bbCCaRtyUzPbB-SqcjseiwVLwFlgQbvCMaMWnvT3EG8/edit?usp=sharing)"
 image: headshots/lisa.png
 image-alt: Headshot of TA
 ---
